--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href="https://github.com/loogawears/portrait-catalogs/blob/main/catalog%20final.pdf">Chick Here To View</a></p>
+  <p><a href="catalog%20final.pdf">Chick Here To View</a></p>
 </html>
